<resources>
<!--    <string name="TaskDescriptionShowAll_text">Task Description</string>-->
    <!--    <string name="newTaskName_text">New Task Name</string>-->
    <!--    <string name="newTaskDescription_text">New Task Description</string>-->
    <!--    <string name="UpdateBtn_text">Update</string>-->
    <!--    <string name="Arabic_text">Arabic</string>-->
    <!--    <string name="English_text">English</string>-->
    <!--    <string name="chooseLanguage_text">Choose Language</string>-->
    <!--    <string name="Green_text">Green</string>-->
    <!--    <string name="Red_text">Red</string>-->
    <!--    <string name="Blue_text">Blue</string>-->
    <!--    <string name="Student_text">Students</string>-->
    <!--    <string name="AboutUs_text">About Us</string>-->
    <!--    <string name="taskcategory_text">Task Category</string>-->




    <string name="app_name">To Do List</string>
    <string name="firstActivity_chooseTask">Choose Task Category</string>
    <string name="language_text">Language</string>
    <string name="setting_text">Setting</string>
    <string name="firstActivity_personal">Personal</string>
    <string name="firstActivity_collage">Collage</string>
    <string name="language_chooseLanguage">Choose Language</string>
    <string name="main_header_personal">Personal</string>
    <string name="main_header_collage">Collage</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="main_taskName">Task Name</string>
    <string name="main_taskDesc">Task Description</string>
    <string name="main_addTask">Add Task</string>
    <string name="main_ShowAllTasks">Show All Tasks</string>
    <string name="showTasks_allTasks">All Tasks</string>
    <string name="update_update">Update</string>
    <string name="update_taskName">Task Name</string>
    <string name="update_taskDesc">task description</string>
    <string name="UpdateContext_text">Update</string>
    <string name="DeleteContext_text">Delete</string>
    <string name="headerContext_text">Select an Option</string>
    <string name="task_type_personal">personal</string>
    <string name="task_type_collage">collage</string>
    <string name="Task_added_Successfully">Task Added Successfully</string>
    <string name="name_description_is_empty"><![CDATA[name & description is empty!]]></string>
    <string name="description_is_empty">description is empty!</string>
    <string name="name_is_empty">name is empty!</string>
    <string name="task_deleted">task Deleted.....</string>


</resources>