<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="30dp"
        tools:context=".UI.MainActivity">

        <TextView
            android:id="@+id/main_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_header_personal"
            android:layout_marginTop="70dp"
            android:textSize="34sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:drawableStart="@drawable/task_name"
            android:drawablePadding="15dp"
            android:id="@+id/main_taskName_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:hint="@string/main_taskName"
            android:inputType="text"
            android:padding="20dp"
            android:textSize="20sp" />

        <EditText
            android:drawableStart="@drawable/task_desc"
            android:drawablePadding="15dp"
            android:id="@+id/main_taskDesc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:hint="@string/main_taskDesc"
            android:inputType="text"
            android:padding="20dp"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_addTask_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:textColor="@color/white"
            android:background="@drawable/btn"
            android:textSize="18sp"

            android:text="@string/main_addTask" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_ShowAllTasks_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/white"
            android:layout_marginTop="64dp"
            android:textSize="18sp"
            android:background="@drawable/btn"
            android:text="@string/main_ShowAllTasks" />

    </LinearLayout>
</layout>