<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <data>

   </data>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_marginHorizontal="30dp"
       tools:context=".UI.first_Activity">

      <TextView
          android:id="@+id/firstActivity_chooseTask_TV"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:text="@string/firstActivity_chooseTask"
          android:textColor="@color/black"
          android:textSize="34sp" />

      <androidx.cardview.widget.CardView
          android:id="@+id/firstActivity_personal_cv"
          android:layout_width="match_parent"
          android:layout_marginTop="60dp"
          app:cardCornerRadius="15dp"
          android:layout_marginHorizontal="5dp"
          android:layout_height="75dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:weightSum="3"
             android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/person" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/firstActivity_personal"
                android:gravity="center"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/next_arrow" />
         </LinearLayout>


      </androidx.cardview.widget.CardView>

      <androidx.cardview.widget.CardView
          android:id="@+id/firstActivity_Collage_cv"
          android:layout_width="match_parent"
          android:layout_marginTop="60dp"
          app:cardCornerRadius="15dp"
          android:layout_marginHorizontal="5dp"
          android:layout_height="75dp">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:weightSum="3"
             android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/school" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/firstActivity_collage"
                android:gravity="center"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:src="@drawable/next_arrow" />
         </LinearLayout>

      </androidx.cardview.widget.CardView>


   </LinearLayout>
</layout>